--- a/src/components/DomainCheck/DomainCheckItem/DomainCheckItem.module.css
+++ b/src/components/DomainCheck/DomainCheckItem/DomainCheckItem.module.css
@@ -5,11 +5,16 @@
    margin: 10px 0;
    box-shadow: 0px 1px 2px 1px rgba(0, 0, 0, 0.25);
    height: 64px;
+   word-break: break-word;
 }
 
 .Name {
    font-weight: bold;
    align-self: center;
+}
+
+.Invalid {
+   color: red;
 }
 
 .Availability {
