--- a/src/components/DomainCheck/DomainCheck.module.css
+++ b/src/components/DomainCheck/DomainCheck.module.css
@@ -2,6 +2,7 @@
    display: flex;
    flex-flow: column;
    box-shadow: 0 0 3px 1px rgba(0, 0, 0, 0.5);
-   margin-top: 20px;
+   margin-top: 2rem;
    width: 80%;
+   padding: 1rem;
 }
