--- a/src/components/DomainCheck/DomainCheckItem/DomainCheckItem.module.css
+++ b/src/components/DomainCheck/DomainCheckItem/DomainCheckItem.module.css
@@ -1,6 +1,7 @@
 .DomainCheckItem {
    display: flex;
    justify-content: space-between;
+   align-items: center;
    padding: 0 5px;
    margin: 10px 0;
    box-shadow: 0px 1px 2px 1px rgba(0, 0, 0, 0.25);
