--- a/src/containers/DomainList/DomainList.module.css
+++ b/src/containers/DomainList/DomainList.module.css
@@ -15,11 +15,46 @@
    margin-left: 15px;
 }
 
+.Button {
+   border: none;
+   box-shadow: 0 1px 2px rgba(1, 1, 1, 0.5);
+   background: linear-gradient(20deg, #418550 2%, #4ca860 50%, #578f0e 100%);
+   color: #ffff00;
+   padding: 1rem 2rem;
+   border-radius: 25%;
+   cursor: pointer;
+   font-size: 1.2rem;
+   transition: all 0.5s ease;
+}
+
+.Button:active {
+   transform: translateY(2px);
+   box-shadow: inset 0 3px 2px 3px rgba(1, 1, 1, 0.5);
+}
+
+.Button:disabled {
+   cursor: not-allowed;
+   background: linear-gradient(20deg, #2d5c37 2%, #3a8149 50%, #355807 100%);
+   color: #c7c700;
+}
+
 .Textarea {
    width: 600px;
    height: 300px;
+   min-width: 500px;
+   max-width: 800px;
+   min-height: 200px;
+   max-height: 600px;
+   font-family: 'Inconsolata', sans-serif;
+   font-size: .9rem;
+   border-radius: 8px;
+   border: none;
+   padding-left: 2px;
+   box-shadow: 2px 1px 4px 1px #68ffeb;
+   background-color: #ffffffe8;
 }
 
 .Textarea:read-only {
    background-color: thistle;
+   cursor: not-allowed;
 }
