--- a/src/components/UI/Button/Button.module.css
+++ b/src/components/UI/Button/Button.module.css
@@ -3,15 +3,20 @@
    box-shadow: 0 1px 2px rgba(1, 1, 1, 0.5);
    background: linear-gradient(20deg, #418550 2%, #4ca860 50%, #578f0e 100%);
    color: #ffff00;
-   padding: 1rem 2rem;
-   border-radius: 25%;
+   padding: 1rem 1rem;
+   border-radius: 10px;
    cursor: pointer;
    font-size: 1.2rem;
    transition: all 0.5s ease;
 }
 
+.Smaller {
+   padding: .5rem .5rem;
+   font-size: 1rem;
+}
+
 .Button:active {
-   transform: translateY(2px);
+   transform: translateY(1px);
    box-shadow: inset 0 3px 2px 3px rgba(1, 1, 1, 0.5);
 }
 
