--- a/src/components/DomainCheck/DomainCheckItem/DomainCheckItem.module.css
+++ b/src/components/DomainCheck/DomainCheckItem/DomainCheckItem.module.css
@@ -7,6 +7,7 @@
    box-shadow: 0px 1px 2px 1px rgba(0, 0, 0, 0.25);
    height: 64px;
    word-break: break-word;
+   background-color: rgba(224, 148, 148, 0.315)
 }
 
 .Name {
@@ -15,7 +16,7 @@
 }
 
 .Invalid {
-   color: #860b0b;
+   color: var(--red);
 }
 
 .Availability {
@@ -24,5 +25,5 @@
 }
 
 .Green {
-   color: green;
+   color: var(--green);
 }
