--- a/src/components/UI/Button/Button.module.css
+++ b/src/components/UI/Button/Button.module.css
@@ -1,18 +1,18 @@
 .Button {
+   padding: .5rem .5rem;
+   font-size: 1rem;
    border: none;
    box-shadow: 0 1px 2px rgba(1, 1, 1, 0.5);
    background: linear-gradient(20deg, #418550 2%, #4ca860 50%, #578f0e 100%);
    color: #ffff00;
-   padding: 1rem 1rem;
    border-radius: 10px;
    cursor: pointer;
-   font-size: 1.2rem;
-   transition: all 0.5s ease;
+   transition: all .3s ease-in-out;
 }
 
-.Smaller {
-   padding: .5rem .5rem;
-   font-size: 1rem;
+.Bigger {
+   padding: 1rem 1rem;
+   font-size: 1.2rem;
 }
 
 .Button:active {
