--- a/src/components/DomainCheck/DomainCheckItem/DomainCheckItem.module.css
+++ b/src/components/DomainCheck/DomainCheckItem/DomainCheckItem.module.css
@@ -7,7 +7,6 @@
    box-shadow: 0px 1px 2px 1px rgba(0, 0, 0, 0.25);
    height: 64px;
    word-break: break-word;
-   background-color: rgba(224, 148, 148, 0.315)
 }
 
 .Name {
@@ -16,6 +15,7 @@
 }
 
 .Invalid {
+   background-color: rgba(224, 148, 148, 0.315);
    color: var(--red);
 }
 
@@ -24,6 +24,7 @@
    width: auto;
 }
 
-.Green {
+.Success {
+   background-color: rgba(148, 224, 186, 0.315);
    color: var(--green);
 }
