--- a/src/components/UI/Modal/Modal.module.css
+++ b/src/components/UI/Modal/Modal.module.css
@@ -5,7 +5,7 @@
    top: 30%;
    left: calc(50% - 250px);
    width: 500px;
-   height: 200px;
+   min-height: 100px;
    border-radius: 15px;
    border: 1px solid #ccc;
    box-shadow: 0 2px 2px 3px rgba(1, 1, 1, .25);
