--- a/src/components/UI/Button/Button.module.css
+++ b/src/components/UI/Button/Button.module.css
@@ -1,6 +1,6 @@
 .Button {
    padding: .5rem .5rem;
-   font-size: 1rem;
+   font-size: 1.3rem;
    border: none;
    box-shadow: 0 1px 2px rgba(1, 1, 1, 0.5);
    background: linear-gradient(20deg, #418550 2%, #4ca860 50%, #578f0e 100%);
@@ -8,6 +8,12 @@
    border-radius: 10px;
    cursor: pointer;
    transition: all .1s ease-in-out;
+}
+
+@media all and (max-width: 800px) {
+   .Button {
+      font-size: .8rem;
+   }
 }
 
 .Bigger {
