--- a/src/components/UI/Textarea/Textarea.module.css
+++ b/src/components/UI/Textarea/Textarea.module.css
@@ -1,15 +1,15 @@
 .Textarea {
-   width: 600px;
+   font-family: 'Inconsolata', sans-serif;
+   font-size: 1.1rem;
+   width: 60%;
    height: 300px;
    min-width: 500px;
    max-width: 800px;
    min-height: 200px;
    max-height: 600px;
-   font-family: 'Inconsolata', sans-serif;
-   font-size: .9rem;
+   padding: 10px 0 0 10px;
    border-radius: 8px;
    border: none;
-   padding-left: 2px;
    box-shadow: 2px 1px 4px 1px #68ffeb;
    background-color: var(--white);
 }
@@ -17,4 +17,23 @@
 .Textarea:read-only {
    background-color: thistle;
    cursor: not-allowed;
+}
+
+@media all and (max-width: 700px) {
+   .Textarea {
+      width: 90%;
+      /* max-width: 600px; */
+      min-width: 250px;
+   }
+}
+
+@media all and (max-width: 500px) {
+   .Textarea {
+      /* width: calc(50% - 50px); */
+      max-width: 350px;
+
+      height: 200px;
+      min-height: 100px;
+      max-height: 250px;
+   }
 }
