--- a/src/containers/DomainList/DomainList.module.css
+++ b/src/containers/DomainList/DomainList.module.css
@@ -3,8 +3,16 @@
    display: flex;
    flex-direction: column;
    margin: 0 auto;
-   justify-content: center;
-   align-items: center;
+}
+
+.DomainList form {
+   margin: 5%;
+}
+
+@media all and (max-width: 350px) {
+   .DomainList form {
+      margin: 0;
+   }
 }
 
 .HistoryButton {
