--- a/src/containers/HistoryDomains/HistoryDomain.module.css
+++ b/src/containers/HistoryDomains/HistoryDomain.module.css
@@ -5,16 +5,20 @@
 
 .Filters {
    display: flex;
+   /* flex: 1; */
+   flex-wrap: wrap;
    justify-content: center;
    align-items: baseline;
 }
 
 .Filters>* {
+   margin-top: 2rem;
    margin-right: 1rem;
 }
 
 .Filters input {
    align-self: stretch;
+   font-size: .8rem;
    width: 25%;
 }
 
