--- a/src/index.css
+++ b/src/index.css
@@ -1,10 +1,22 @@
 html {
    box-sizing: border-box;
-   font-size: 18px;
+   font-size: 14px;
 
    --red: #860b0b;
    --green: #0f690f;
    --white: #f1f1f1ef;
+}
+
+@media all and (max-width: 400px) {
+   html {
+      font-size: 12px;
+   }
+}
+
+@media all and (max-width: 350px) {
+   html {
+      font-size: 10px;
+   }
 }
 
 *,
