--- a/src/components/UI/Button/Button.module.css
+++ b/src/components/UI/Button/Button.module.css
@@ -1,33 +1,33 @@
 .Button {
-   padding: .5rem .5rem;
-   font-size: 1.3rem;
-   border: none;
-   box-shadow: 0 1px 2px rgba(1, 1, 1, 0.5);
-   background: linear-gradient(20deg, #418550 2%, #4ca860 50%, #578f0e 100%);
-   color: #ffff00;
-   border-radius: 10px;
-   cursor: pointer;
-   transition: all .1s ease-in-out;
+  padding: 0.5rem 0.5rem;
+  font-size: 1.3rem;
+  border: none;
+  box-shadow: 0 1px 2px rgba(1, 1, 1, 0.5);
+  background: linear-gradient(20deg, #418550 2%, #4ca860 50%, #578f0e 100%);
+  color: var(--yellow);
+  border-radius: 10px;
+  cursor: pointer;
+  transition: all 0.1s ease-in-out;
 }
 
 @media all and (max-width: 800px) {
-   .Button {
-      font-size: .8rem;
-   }
+  .Button {
+    font-size: 0.8rem;
+  }
 }
 
 .Bigger {
-   padding: 1rem 1rem;
-   font-size: 1.2rem;
+  padding: 1rem 1rem;
+  font-size: 1.2rem;
 }
 
 .Button:active {
-   transform: translate(2px, 3px);
-   box-shadow: inset 0 3px 2px 3px rgba(1, 1, 1, 0.5);
+  transform: translate(2px, 3px);
+  box-shadow: inset 0 3px 2px 3px rgba(1, 1, 1, 0.5);
 }
 
 .Button:disabled {
-   cursor: not-allowed;
-   background: linear-gradient(20deg, #2d5c37 2%, #3a8149 50%, #355807 100%);
-   color: #c7c700;
+  cursor: not-allowed;
+  background: linear-gradient(20deg, #2d5c37 2%, #3a8149 50%, #355807 100%);
+  color: var(--dark-yellow);
 }
