--- a/src/components/DomainCheck/DomainCheckItem/DomainCheckItem.module.css
+++ b/src/components/DomainCheck/DomainCheckItem/DomainCheckItem.module.css
@@ -1,47 +1,57 @@
 .DomainCheckItem {
-   display: flex;
-   justify-content: space-between;
-   align-items: center;
-   padding: 0 5px;
-   margin: 10px 0;
-   box-shadow: 0px 1px 2px 1px rgba(0, 0, 0, 0.25);
-   height: 64px;
-   word-break: break-word;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 0 5px;
+  margin: 10px 0;
+  box-shadow: 0px 1px 2px 1px rgba(0, 0, 0, 0.25);
+  height: 64px;
+  word-break: break-word;
 }
 
 @media all and (max-width: 550px) {
-   .DomainCheckItem {
-      flex-direction: column;
-      font-size: .8rem;
-      flex: 1;
-   }
+  .DomainCheckItem {
+    flex-direction: column;
+    font-size: 0.8rem;
+    flex: 1;
+  }
 
-   .Availability {
-      order: 1;
-   }
+  .Availability {
+    order: 1;
+  }
 
-   .Name {
-      order: 2;
-   }
+  .Name {
+    order: 2;
+  }
 }
 
 .Name {
-   font-weight: bold;
-   align-self: center;
-   margin: 0 5px;
+  font-weight: bold;
+  align-self: center;
+  margin: 0 5px;
 }
 
 .Invalid {
-   background-color: rgba(224, 148, 148, 0.315);
-   color: var(--red);
+  background-color: rgba(224, 148, 148, 0.315);
+  color: var(--red);
 }
 
 .Availability {
-   height: 22px;
-   width: auto;
+  height: 22px;
+  width: auto;
 }
 
 .Success {
-   background-color: rgba(148, 224, 186, 0.315);
-   color: var(--green);
+  background-color: rgba(148, 224, 186, 0.315);
+  color: var(--green);
+}
+
+/* hold the button and the item data */
+.Container {
+  display: flex;
+  align-items: center;
+}
+
+.Container > div {
+  flex: 1;
 }
