--- a/src/index.css
+++ b/src/index.css
@@ -57,3 +57,12 @@ code {
 small {
   font-size: 0.9rem;
 }
+
+a {
+  text-decoration: none;
+  color: inherit;
+}
+
+a:hover {
+  text-decoration: underline;
+}
