--- a/src/containers/DomainList/DomainList.module.css
+++ b/src/containers/DomainList/DomainList.module.css
@@ -1,29 +1,33 @@
 .DomainList {
-   width: 80%;
-   display: flex;
-   flex-direction: column;
-   margin: 0 auto;
+  width: 80%;
+  display: flex;
+  flex-direction: column;
+  margin: 0 auto;
 }
 
 .DomainList form {
-   margin: 5%;
+  margin: 5%;
 }
 
 @media all and (max-width: 350px) {
-   .DomainList form {
-      margin: 0;
-   }
+  .DomainList form {
+    margin: 0;
+  }
 }
 
 .HistoryButton {
-   margin: .5rem 0 0 .5rem;
-   text-align: left;
+  margin: 0.5rem 0 0 0.5rem;
+  text-align: left;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  width: 12%;
 }
 
 .Buttons {
-   margin-top: 15px;
+  margin-top: 15px;
 }
 
 .Buttons button:last-child {
-   margin-left: 15px;
+  margin-left: 15px;
 }
