add github link and button to report - WIP  - button not work

--- a/src/components/Info/Info.module.css
+++ b/src/components/Info/Info.module.css
@@ -2,3 +2,17 @@
   text-align: center;
   padding: 0.5rem;
 }
+
+.Footer {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.Footer button {
+  margin-left: 1rem;
+  cursor: pointer;
+  background: transparent;
+  border: 5px solid rgba(0, 0, 0, 0.25);
+  border-radius: 5px;
+}
