--- a/src/components/Confirmation/Confirmation.module.css
+++ b/src/components/Confirmation/Confirmation.module.css
@@ -1,16 +1,21 @@
 .Confirmation {
-   display: flex;
-   flex-direction: column;
-   justify-content: space-evenly;
-   height: 100%;
-   padding: 1rem 0;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  height: 100%;
+  padding: 1rem 0;
 }
 
 .Buttons {
-   display: flex;
-   justify-content: center;
+  display: flex;
+  justify-content: center;
 }
 
-.Buttons>*:first-child {
-   margin-right: 1rem;
+.Buttons > *:first-child {
+  margin-right: 1rem;
+}
+
+.AdditionalText {
+  font-size: 1.1rem;
+  color: var(--red);
 }
