add/fix filter and search history domains to redux store

--- a/src/components/UI/SymbolsCheck/SymbolsCheck.module.css
+++ b/src/components/UI/SymbolsCheck/SymbolsCheck.module.css
@@ -1,7 +1,7 @@
-.Success {
-   color: var(--green);
+.Available {
+  color: var(--green);
 }
 
-.Fail {
-   color: var(--red);
+.Unavailable {
+  color: var(--red);
 }
