--- a/src/components/UI/Button/Button.module.css
+++ b/src/components/UI/Button/Button.module.css
@@ -21,6 +21,7 @@
   font-size: 1.2rem;
 }
 
+.Button.Active,
 .Button:active {
   transform: translate(2px, 3px);
   box-shadow: inset 0 3px 2px 3px rgba(1, 1, 1, 0.5);
